# Image-Scrapling

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: release.yml  secret-scan.yml
apps/cli/: README.md  __init__.py
docs/: developer-workflow.md  vtracer-python-314.md
docs/planning/: github-issues-initial.md  project-plan.md
scripts/: reproduce_vtracer_py314_crash.py
src/svg_scrapling/: __init__.py  __main__.py  cli.py
src/svg_scrapling/browser/: __init__.py  lightpanda.py
src/svg_scrapling/config/: __init__.py  models.py
src/svg_scrapling/conversion/: __init__.py  svg_cleanup.py  vtracer_backend.py  vtracer_runner.py
src/svg_scrapling/domain/: __init__.py  models.py
src/svg_scrapling/download/: __init__.py  downloader.py
src/svg_scrapling/extraction/: __init__.py  contracts.py  heuristics.py
src/svg_scrapling/licensing/: __init__.py  policy.py
src/svg_scrapling/manifests/: __init__.py  reader.py  writer.py
src/svg_scrapling/pipeline/: __init__.py  service.py
src/svg_scrapling/quality/: __init__.py  scoring.py
src/svg_scrapling/ranking/: __init__.py  deduplication.py
src/svg_scrapling/reporting/: __init__.py  summary.py
src/svg_scrapling/runtime/: __init__.py  composition.py  defaults.py  fetching.py  providers.py
src/svg_scrapling/scraping/: __init__.py  fetch.py
src/svg_scrapling/search/: __init__.py  bing_html.py  duckduckgo_html.py  providers.py  query_expansion.py
src/svg_scrapling/storage/: __init__.py  run_layout.py
tests/fixtures/extraction/: source_page.html  source_page.json
tests/fixtures/fetch/: static_page.html
tests/fixtures/manifests/: golden_manifest.jsonl  golden_summary.txt
tests/fixtures/search/: bing_results.html  candidate_pages.json  duckduckgo_results.html
tests/integration/: test_find_pipeline.py  test_golden_manifest.py  test_packaged_install.py
tests/unit/: test_browser_lightpanda.py  test_cli.py  test_config_models.py  test_deduplication.py  test_domain_models.py  test_downloader.py  test_extraction_contracts.py  test_fetching.py  test_fixture_coverage.py  test_licensing_policy.py  test_manifest_writer.py  test_package_exports.py  test_package_version.py  test_quality_scoring.py  test_query_expansion.py  test_reporting_commands.py  test_run_layout.py  test_runtime_composition.py  test_runtime_defaults.py  test_runtime_fetching.py  test_search_provider.py  test_smoke.py  test_svg_cleanup.py  test_vtracer_conversion.py
