[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "svg-scrapling"
version = "0.1.0"
description = "CLI-first pipeline for discovering and cataloging coloring-style SVG and PNG assets."
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { text = "Proprietary" }
authors = [
  { name = "SVG Scrapling Maintainers" },
]
keywords = [
  "svg",
  "scraping",
  "cli",
  "assets",
  "coloring-pages",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: Other/Proprietary License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Multimedia :: Graphics",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  "scrapling>=0.4.2",
  "typer>=0.16.0",
]

[project.optional-dependencies]
conversion = [
  "vtracer>=0.6.12",
]

[project.urls]
Homepage = "https://github.com/PSyron/Image-Scrapling"
Repository = "https://github.com/PSyron/Image-Scrapling"
Issues = "https://github.com/PSyron/Image-Scrapling/issues"

[project.scripts]
assets = "svg_scrapling.__main__:main"

[dependency-groups]
dev = [
  "mypy>=1.15.0",
  "pytest>=8.3.0",
  "ruff>=0.11.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/svg_scrapling"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "apps", "tests"]
target-version = "py310"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "SIM", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src", "apps"]
explicit_package_bases = true
mypy_path = ["src", "apps"]
